--- a/views/index.html
+++ b/views/index.html
@@ -5,6 +5,17 @@
   <meta charset="utf-8" />
   <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- jQuery -->
+  <script src="/vendor/jquery/dist/jquery.min.js"></script>
+  <!-- Underscore -->
+  <script src="/vendor/underscore/underscore-min.js"></script>
+  <!-- Bootstrap JS -->
+  <script src="/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="/vendor/bootstrap/dist/css/bootstrap.min.css">
+  <!-- ToEat.ly -->
+  <link rel="stylesheet" type="text/css" href="/static/css/main.css">
+  <script src="/static/js/app.js"></script>
 </head>
 <body>
   <div id="page-wrapper" class="container">
