--- a/views/index.html
+++ b/views/index.html
@@ -22,7 +22,11 @@
     <header class="page-header">
       <h1>ToEat.ly <small>Put it in my belly!</small></h1>
     </header>
+    <ul id="food-ul">
   </div>
+  <script type="text/template" id="foods-template">
+    <li><%= name %> <span><%= yumminess%></span></li>
+  </script>
 </body>
 </html>
 
