--- a/views/index.html
+++ b/views/index.html
@@ -22,6 +22,12 @@
     <header class="page-header">
       <h1>ToEat.ly <small>Put it in my belly!</small></h1>
     </header>
+    <!-- form -->
+    <form id="new-food-form">
+      <input name="name" type="text" id="food-name-input" placeholder="Name">
+      <input name="yumminess" type="text" id="food-yumminess-input" placeholder="Yumminess">
+      <button type="submit">Eat me!</button>
+    </form>
     <ul id="food-ul">
   </div>
   <script type="text/template" id="foods-template">
