prep for mongo integration

--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>ToEat.ly</title>
+  <title>Bite Me</title>
   <meta charset="utf-8" />
   <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -20,13 +20,13 @@
 <body>
   <div id="page-wrapper" class="container">
     <header class="page-header">
-      <h1>ToEat.ly <small>Put it in my belly!</small></h1>
+      <h1>Bite Me <small>Om Noms!</small></h1>
     </header>
     <!-- form -->
     <form id="new-food-form">
       <input name="name" type="text" id="food-name-input" placeholder="Name">
       <input name="yumminess" type="text" id="food-yumminess-input" placeholder="Yumminess">
-      <button type="submit">Eat me!</button>
+      <button type="submit">Bite me!</button>
     </form>
     <ul id="food-ul">
   </div>
